--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ flutter:
     - assets/images/anzlogo.png
     - assets/images/anzbg.png
     - assets/images/arrow.png
+    - assets/images/sean-oulashin-KMn4VEeEPR8-unsplash 1@2x.png
 
   fonts:
     - family: Inter
